--- a/javalette.cabal
+++ b/javalette.cabal
@@ -19,7 +19,7 @@ library
   build-depends:       base >= 4.7 && < 5
   default-language:    Haskell2010
 
-executable javalette-exe
+executable javalette
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
@@ -27,7 +27,7 @@ executable javalette-exe
                      , javalette
   default-language:    Haskell2010
 
-test-suite javalette-test
+test-suite test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
