--- a/javalette.cabal
+++ b/javalette.cabal
@@ -15,12 +15,26 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     
+  exposed-modules:     Javalette.Syntax.AbsJavalette
+                     , Javalette.Syntax.ErrM
+                     , Javalette.Syntax.LexJavalette
+                     , Javalette.Syntax.ParJavalette
+                     , Javalette.Syntax.PrintJavalette
+                     , Javalette.Syntax.SkelJavalette
   build-depends:       base >= 4.7 && < 5
+                     , array
   default-language:    Haskell2010
 
 executable javalette
   hs-source-dirs:      app
+  main-is:             Main.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , javalette
+  default-language:    Haskell2010
+
+executable javalette-parser
+  hs-source-dirs:      parser
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
