--- a/javalette.cabal
+++ b/javalette.cabal
@@ -28,8 +28,8 @@ library
                      , containers >= 0.5.7
   default-language:    Haskell2010
 
-executable javalette
-  hs-source-dirs:      app
+executable jlc
+  hs-source-dirs:      apps/compiler
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
@@ -37,7 +37,7 @@ executable javalette
   default-language:    Haskell2010
 
 executable javalette-parser
-  hs-source-dirs:      parser
+  hs-source-dirs:      apps/parser
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
