Implement parsing that conforms to the output that the test-runner expects
At this point were accepting all the valid programs
and accepting some of the bad ones as well (these programs
are probably syntactically correct)

--- a/javalette.cabal
+++ b/javalette.cabal
@@ -22,6 +22,7 @@ library
                      , Javalette.Syntax.PrintJavalette
                      , Javalette.Syntax.SkelJavalette
                      , Javalette.TypeChecking
+                     , Javalette.Parser
                      , Javalette.Parser.Main
   build-depends:       array
                      , base >= 4.7 && < 5
