--- a/javalette.cabal
+++ b/javalette.cabal
@@ -26,8 +26,10 @@ library
                      , Javalette.Parser.Main
   build-depends:       array
                      , base >= 4.7 && < 5
-                     , mtl >= 2.2.1
                      , containers >= 0.5.7
+                     , free >= 4.12.0
+                     , mtl >= 2.2.1
+                     , pretty >= 1.1.3.3
   default-language:    Haskell2010
 
 executable jlc
