Fix error in `modFirst` that would discard scopes where variable was not found
This commit also runs the interpreter on the generated program.

--- a/javalette.cabal
+++ b/javalette.cabal
@@ -21,6 +21,8 @@ library
                      , Javalette.Syntax.ParJavalette
                      , Javalette.Syntax.PrintJavalette
                      , Javalette.Syntax.SkelJavalette
+                     , Javalette.Interpreter
+                     , Javalette.Interpreter.Program
                      , Javalette.TypeChecking
                      , Javalette.Parser
                      , Javalette.Parser.Main
