--- a/jlctests/Makefile
+++ b/jlctests/Makefile
@@ -12,4 +12,5 @@ distrib:
 	tar -czf tester.tar.gz tester
 
 test:   Grade
-	./Grade ../.stack-work/install/x86_64-linux-nopie/lts-8.5/8.0.2/bin
+	stack install javalette:jlc
+	./Grade `stack path --local-bin`
