Use stack command to find repo-root

--- a/javalette.cabal
+++ b/javalette.cabal
@@ -13,7 +13,7 @@ category:            Web
 build-type:          Simple
 extra-source-files:  README.md
                      doc/README.md
-                     Makefile
+                     src/Makefile
                      stack.yaml
 cabal-version:       >=1.10
 
