--- a/javalette.cabal
+++ b/javalette.cabal
@@ -44,9 +44,11 @@ library
   build-depends:       array
                      , base >= 4.7 && < 5
                      , containers >= 0.5.7
+                     , filepath >= 1.4.1.1
                      , free >= 4.12.0
                      , mtl >= 2.2.1
                      , pretty >= 1.1.3.3
+                     , process >= 1.4.3.0
   default-language:    Haskell2010
 
 executable jlc
@@ -55,6 +57,7 @@ executable jlc
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , javalette
+                     , filepath >= 1.4.1.1
   default-language:    Haskell2010
 
 executable javalette-parser
