--- a/javalette.cabal
+++ b/javalette.cabal
@@ -17,6 +17,7 @@ extra-source-files:  README.md
                      src/Makefile
                      stack.yaml
                      Javalette.cf
+                     lib/runtime.ll
 cabal-version:       >=1.10
 
 library
