--- a/test/Makefile
+++ b/test/Makefile
@@ -14,4 +14,4 @@ distrib:
 BUILD_DIR = $(shell stack path --project-root)/$(shell stack path --dist-dir)/build/jlc
 
 test:   Grade
-	./Grade -bLLVM $(BUILD_DIR)
+	./Grade -g-no-pie -bLLVM $(BUILD_DIR)
