--- a/test/jlctests.cabal
+++ b/test/jlctests.cabal
@@ -19,7 +19,7 @@ executable Grade
     TestAll
   build-depends:
       base      >=4.8 && <5
-    , process   >=1.2 && <1.3
+    , process   >=1.2
     , directory >=1.2 && <1.3
     , filepath  >=1.4 && <1.5
     , unix      >=2.7 && <2.8
