--- a/javalette.cabal
+++ b/javalette.cabal
@@ -51,6 +51,7 @@ library
                      , mtl >= 2.2.1
                      , pretty >= 1.1.3.3
                      , process >= 1.4.3.0
+                     , optparse-applicative >= 0.13.2.0
   default-language:    Haskell2010
 
 executable jlc
@@ -58,8 +59,9 @@ executable jlc
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , javalette
                      , filepath >= 1.4.1.1
+                     , javalette
+                     , optparse-applicative >= 0.13.2.0
   default-language:    Haskell2010
 
 executable javalette-parser
