--- a/javalette.cabal
+++ b/javalette.cabal
@@ -44,6 +44,7 @@ library
                        Javalette.Backend.LLVM
                        Javalette.Backend.LLVM.CodeGenerator
                        Javalette.Backend.LLVM.Renamer
+                       Javalette.Utils.Box
   build-depends:       array
                      , base >= 4.7 && < 5
                      , containers >= 0.5.7
