--- a/javalette.cabal
+++ b/javalette.cabal
@@ -46,7 +46,6 @@ library
                        Javalette.Backend.LLVM
                        Javalette.Backend.LLVM.CodeGenerator
                        Javalette.Backend.LLVM.Renamer
-                       Javalette.Utils.Box
   build-depends:       array
                      , base >= 4.7 && < 5
                      , containers >= 0.5.7
@@ -57,6 +56,7 @@ library
                      , pretty >= 1.1.3.3
                      , process >= 1.4.3.0
                      , temporary >= 1.2.0.4
+                     , shade >= 0.1.1.1
   default-language:    Haskell2010
 
 executable jlc
