--- a/stack.yaml
+++ b/stack.yaml
@@ -37,9 +37,9 @@ resolver: lts-8.5
 # will not be run. This is useful for tweaking upstream packages.
 packages:
 - '.'
-# Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- shade-0.1.1.1
 
 # Override default flag values for local packages and extra-deps
 flags: {}
